# Ra

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  \  cAll.sh  cBuild.sh  cRelease.sh  cWinBuild.sh  cWinRelease.sh  clean.sh  debugBuild.sh  releaseBuild.sh
.github/workflows/: cmake.yml
demogaem/: .ccls  CMakeLists.txt
demogaem/demogaem/: main.cpp
libgaem/: .ccls  CMakeLists.txt  application.cpp  application.hpp  core.hpp  libgaem.hpp  log.hpp
libgaem/libgaem/: CMakeLists.txt  application.cpp  application.hpp  core.hpp  test.cpp
libgaem/libgaem/render/: CMakeLists.txt  device.cpp  device.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  model.hpp  pipeline.hpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp
libgaem/libgaem/shaders/: CMakeLists.txt  example.vert
libgaem/render/: device.cpp  device.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderSystem.cpp  renderSystem.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  window.cpp  window.hpp
libgaem/shaders/: example.frag  example.vert
src/: device.cpp  device.hpp  exampleApp.cpp  exampleApp.hpp  func.cpp  func.h  gaem_device.cpp  gaem_device.hpp  gaem_exampleApp.cpp  gaem_exampleApp.hpp  gaem_model.cpp  gaem_model.hpp  gaem_pipeline.cpp  gaem_pipeline.hpp  gaem_swapChain.cpp  gaem_swapChain.hpp  gaem_window.cpp  log.h  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  swapChain.cpp  swapChain.hpp  test.cpp  window.cpp  window.hpp
src/shaders/: example.frag  example.vert
